# cycarla

./: .gitignore  CONTRIBUTING.md  README.md  cycarla-logo-master.psd  package-lock.json  package.json  pyproject.toml  run_carla.sh  run_controller.sh  run_dev_server.sh  run_server.sh
cycarla/: app.py  const.py  globals.py  manual_control.py  mock_bleak.py  rich_main.py  textual_app.py
cycarla-agent/: .gitignore  README.md  pyproject.toml
cycarla-agent/src/cycarla_agent/: __init__.py  ble_utils.py  carla_control.py  pycycling_input.py
cycarla-app/: README.md  index.html  package-lock.json  package.json
cycarla-app/src/: App.css  App.jsx  socket.js
cycarla-app/src-tauri/: Cargo.toml  tauri.conf.json
cycarla-app/src-tauri/src/: main.rs
cycarla-app/src/components/: DropDown.jsx  LiveStats.jsx  SliderNumerical.jsx  SteeringVisualizer.jsx
cycarla-backend/: CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  entrypoint.sh  pyproject.toml
cycarla-backend/cycarla_backend/: STRAVA_HOWTO.md  carla_control.py  filters.py  gpx.py  main.py  profile.html  profile.json
cycarla-controller/: README.md  package-lock.json  package.json
cycarla-controller/app/: page.js  socket.js
cycarla-controller/app/components/: BTModal.js  BlackJPEG.js  SteeringVisualizer.js
cycarla-controller/src/: App.js
cycarla-frontend/: CONTRIBUTING.md  README.md  RELEASE.md  package-lock.json  package.json  run.sh  start.js
cycarla-frontend/app/: layout.js  page.js  socket.js
cycarla-frontend/app/components/: BTModal.js  DropDown.js  LiveStats.js  SliderNumerical.js  SteeringVisualizer.js
cycarla-server/: Dockerfile  README.md  dev_entrypoint.sh  entrypoint.sh  output.gpx  pyproject-backup.toml  pyproject.toml
cycarla-server/cycarla_server/: ble_utils.py  carla_control.py  gpx.py  gpx_demo.py  main.py  outputfromdemo.gpx  pycycling_input.py  test.gpx
cycarla/.appdata/: README.md  bt_history.temp
cycarla/css/: stylesheet.css
cycarla/tools/: README.md  bluetooth_dissect.py
tests/: test_placeholder.py
