[tool.poetry]
name = "cycarla"
version = "0.1.0"
description = "Ride your bike in CARLA virtual simulator using indoor cycling accessories"
license = "Proprietary"
authors = ["Jason Sohn<tensorturtle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8.1"
rich = "^12.6.0"
bleak = "^0.19.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
