[project]
name = "cycarla-agent"
version = "0.1.1"
description = "Intermediary server between Cycarla App and CARLA."
readme = "README.md"
authors = [
    { name = "tensorturtle", email = "tensorturtle@gmail.com" }
]
# Python version is fixed to 3.10 because carla package doesn't support higher versions.
requires-python = "~=3.10.0"
dependencies = [
    "flask-socketio>=5.4.1",
    "flask>=3.1.0",
    "pygame>=2.6.1",
    "bleak>=0.22.3",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "flask-cors>=5.0.0",
    "pycycling>=0.4.0",
    "carla>=0.9.15",
]

[project.scripts]
cycarla-agent = "cycarla_agent:main"

[tool.uv]
dev-dependencies = ["nuitka>=2.4.11"]

