[tool.poetry]
name = "cycarla-server"
version = "0.1.0"
description = "Python Flask backend for cycarla-client, communicating with CARLA instance."
authors = ["tensorturtle <tensorturtle@gmail.com>"]
readme = "README.md"
packages = [{include = "cycarla_server"}]

[tool.poetry.dependencies]
python = "~3.10.0"
carla = { file = "/carla-0.9.14-cp310-cp310-linux_x86_64.whl" }
pygame = "^2.1.2"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
bleak = "^0.21.1"
numpy = "1.22.0"
opencv-python = "^4.8.1.78"
flask-cors = "^4.0.0"
pycycling = {git = "https://github.com/tensorturtle/pycycling.git"} # "~0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
